# Open-GroundingDino

./: .gitignore  hello.py  main_ny.py  pyproject.toml  requirements.txt  train_dist_ny.sh
config/: cfg_odvg_ny.py  train_m2.json  train_m2_half.json
