[project]
name = "open-groundingdino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "addict>=2.4.0",
    "colorlog>=6.9.0",
    "cython>=3.0.11",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.8",
    "pyyaml>3.10",
    "scipy>=1.15.1",
    "setuptools>=75.8.0",
    "submitit>=1.5.2",
    "supervision==0.6.0",
    "termcolor>=2.5.0",
    "timm>=1.0.14",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.1",
    "wandb>=0.19.4",
    "yapf==0.40.1",
]
